Remove xmlNamespace property from EDM structure
- Completely removed xmlNamespace property from all elements
- XML namespace information is implementation-specific and doesn't belong in logical EDM structure
- Maintains clean separation between conceptual EDM model and XML serialization details
- Elements now contain only essential EDM structure information: name, description, ref, children, attributes
- Build and generation continue to work correctly without XML-specific properties

--- a/templates/attribute-table.hbs
+++ b/templates/attribute-table.hbs
@@ -1,5 +1,5 @@
 | Name | Type | Description | docs |
 |------|------|-------------|------|
 {{#each attributes}}
-| {{name}} | {{formatAttributeType this}} | {{formatAttributeDescription this}} | {{externalAttributeLink this ../baseUrl}} |
+| {{name}} | {{formatAttributeType this}} | {{formatAttributeDescription this}} | {{externalLink name ref ../baseUrl}} |
 {{/each}}
