--- a/templates/element-markdown.hbs
+++ b/templates/element-markdown.hbs
@@ -1,9 +1,9 @@
 {{headerMark headerLevel}} {{name}} Element
 
 {{#if description}}
-{{description}} {{externalElementLink name ref baseUrl}}
+{{description}} {{externalLink name ref baseUrl}}
 {{else}}
-*!!!!!Missing description !!!* {{externalElementLink name ref baseUrl}}
+*!!!!!Missing description !!!* {{externalLink name ref baseUrl}}
 {{/if}}
 
 
